	* Make the search dialog unobtrusive in the conversation window (by
	  making it look and behave like the search dialog in Firefox)
	* The Recent Log Activity sort method for the Buddy List now
	  distinguishes between no activity and a small amount of activity
	  in the distant past.  (Greg McNew)
	* Added a menu set mood globally for all mood-supporting accounts
	  (currently XMPP and ICQ).

	Bonjour:
	* Added support for IPv6. (Thanks to T_X for testing)

	Gadu-Gadu:
	* Updated our bundled libgadu to 1.9.0-rc2 (many thanks to Krzysztof
	  Klinikowski for the work and testing put in here!)
	* Minimum requirement for external libgadu is now also 1.9.0-rc2.

	ICQ:
	* X-Status (Custom ICQ status icon) support.  Since most of the icons
	  available reflect moods, this is labeled "Set Mood" on the Accounts->ICQ
	  Account menu. (Andrew Ivanov, Tomáš Kebert, Yuriy Yevgrafov, and trac
	  users bob007, salieff, and nops)
	* Allow setting and displaying icons between 1x1 and 100x100 pixels.
	  Previously only icons between 48x48 and 52x64 were allowed.

	MSN:
	* Support for version 9 of the MSN protocol has been removed.  This
	  version is no longer supported on the servers.

	XMPP:
	* Direct messages to a specific resource only upon receipt of a message
	  with content (as opposed to a typing notification, etc).  (Thanks to
	  rjoly for testing)
	* When sending data using in-band-bytestreams, interpret the block-size
	  attribute as the size of the BASE64-encoded representation of the data.

	Yahoo:
	* Attempt to better handle transparent proxies interfering with HTTP-based
	  login.
	* Fix handling of P2P packets, thus fixing the loss of some messages.

version 2.6.6 (02/18/2010):
	libpurple:
	* Fix 'make check' on OS X. (David Fang)
	* Fix a quirk in purple_markup_html_to_xhtml that caused some messages
	  to be improperly converted to XHTML.
	* Set "controlling-mode" correctly when initializing a media session.
	  Fixes receiving voice calls from Psi.